[gd_scene load_steps=38 format=3 uid="uid://sqo0wk0jqq47"]

[ext_resource type="Script" uid="uid://cawnbu2m0hova" path="res://turtle.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://evfxn7dt1wsp" path="res://assets/Art Assets/Egg Assets/egg1.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dtgfdk1fa2rx3" path="res://assets/Art Assets/Egg Assets/egg2.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bd6nqtafw753b" path="res://assets/Art Assets/Egg Assets/egg3.png" id="4"]
[ext_resource type="Texture2D" uid="uid://5hxaq8bv55og" path="res://assets/Art Assets/Egg Assets/egg4.png" id="5"]
[ext_resource type="Texture2D" uid="uid://beocfn52gjhj1" path="res://assets/Art Assets/Baby Assets/baby_idle.png" id="6"]
[ext_resource type="Texture2D" uid="uid://5wgjanq5d3wk" path="res://assets/Art Assets/Turtle A/A_turtle_idle.png" id="7"]
[ext_resource type="Texture2D" uid="uid://dk4et0taioj0r" path="res://assets/Art Assets/Turtle A/A_turtle_blink.png" id="8"]
[ext_resource type="Texture2D" uid="uid://cro8gnydosh52" path="res://assets/Art Assets/Turtle A/A_turtle_blush.png" id="9"]
[ext_resource type="Texture2D" uid="uid://bt87wio2l4u1v" path="res://assets/Art Assets/Turtle A/A_turtle_eat.png" id="10"]
[ext_resource type="Texture2D" uid="uid://lmh17irobymn" path="res://assets/Art Assets/Turtle B/B_turtle_idle.png" id="11"]
[ext_resource type="Texture2D" uid="uid://b45ddmalgxirm" path="res://assets/Art Assets/Turtle B/B_turtle_blink.png" id="12"]
[ext_resource type="Texture2D" uid="uid://rd7eo177lw8y" path="res://assets/Art Assets/Turtle B/B_turtle_blush.png" id="13"]
[ext_resource type="Texture2D" uid="uid://b2oxx71dile8l" path="res://assets/Art Assets/Turtle B/B_turtle_eat.png" id="14"]
[ext_resource type="Texture2D" uid="uid://cbko5l1l5e6ou" path="res://assets/Art Assets/Turtle C/C_turtle_idle.png" id="15"]
[ext_resource type="Texture2D" uid="uid://cm0sur2hdwbm7" path="res://assets/Art Assets/Turtle C/C_turtle_blink.png" id="16"]
[ext_resource type="Texture2D" uid="uid://d3cndbginq6m4" path="res://assets/Art Assets/Turtle C/C_turtle_blush.png" id="17"]
[ext_resource type="Texture2D" uid="uid://chqv77ksexqiy" path="res://assets/Art Assets/Turtle C/C_turtle_eat.png" id="18"]
[ext_resource type="Texture2D" uid="uid://2pm84bj5iohw" path="res://assets/Art Assets/A Elder/A_elder_idle.png" id="19"]
[ext_resource type="Texture2D" uid="uid://cgby1u883ea13" path="res://assets/Art Assets/A Elder/A_elder_blink.png" id="20"]
[ext_resource type="Texture2D" uid="uid://dr7vt2o2t4r7p" path="res://assets/Art Assets/A Elder/A_elder_blush.png" id="21"]
[ext_resource type="Texture2D" uid="uid://kyqks2hmnflk" path="res://assets/Art Assets/A Elder/A_elder_eat.png" id="22"]
[ext_resource type="Texture2D" uid="uid://cxvthas883pce" path="res://assets/Art Assets/A Elder/A_elder_passing.png" id="23"]
[ext_resource type="Texture2D" uid="uid://c7pa0civq5bjw" path="res://assets/Art Assets/B Elder/B_elder_idle.png" id="24"]
[ext_resource type="Texture2D" uid="uid://dklxdhurqoph5" path="res://assets/Art Assets/B Elder/B_elder_blink.png" id="25"]
[ext_resource type="Texture2D" uid="uid://cyc6ets2tytnb" path="res://assets/Art Assets/B Elder/B_elder_blush.png" id="26"]
[ext_resource type="Texture2D" uid="uid://c17rvoxyo0kor" path="res://assets/Art Assets/B Elder/B_elder_eat.png" id="27"]
[ext_resource type="Texture2D" uid="uid://c4nol1lopwtkb" path="res://assets/Art Assets/B Elder/B_elder_passing.png" id="28"]
[ext_resource type="Texture2D" uid="uid://bnwilei8h522l" path="res://assets/Art Assets/C Elder/C_elder_idle.png" id="29"]
[ext_resource type="Texture2D" uid="uid://chv7wp1okl0fu" path="res://assets/Art Assets/C Elder/C_elder_blink.png" id="30"]
[ext_resource type="Texture2D" uid="uid://cmk0q56hj385r" path="res://assets/Art Assets/C Elder/C_elder_blush.png" id="31"]
[ext_resource type="Texture2D" uid="uid://cl5oa3u8mr8un" path="res://assets/Art Assets/C Elder/C_elder_eat.png" id="32"]
[ext_resource type="Texture2D" uid="uid://bvalv1owp465v" path="res://assets/Art Assets/C Elder/C_elder_passing.png" id="33"]
[ext_resource type="Texture2D" uid="uid://dhp44eccps5y" path="res://assets/Art Assets/Baby Assets/baby1.png" id="34"]
[ext_resource type="AudioStream" uid="uid://bv4upiqbhjbta" path="res://assets/SFX/Egg.mp3" id="35"]
[ext_resource type="AudioStream" uid="uid://bycb8oahd22xt" path="res://assets/SFX/Death.mp3" id="36"]
[ext_resource type="AudioStream" uid="uid://fv8s4f7uewmc" path="res://assets/SFX/Evolution.mp3" id="37"]

[node name="turtle" type="Node2D"]
script = ExtResource("1")
passing_seconds = 180.0
egg_stage_1 = ExtResource("2")
egg_stage_2 = ExtResource("3")
egg_stage_3 = ExtResource("4")
egg_stage_4 = ExtResource("5")
baby_idle = ExtResource("6")
adult_a_idle = ExtResource("7")
adult_a_blink = ExtResource("8")
adult_a_blush = ExtResource("9")
adult_a_eat = ExtResource("10")
adult_b_idle = ExtResource("11")
adult_b_blink = ExtResource("12")
adult_b_blush = ExtResource("13")
adult_b_eat = ExtResource("14")
adult_c_idle = ExtResource("15")
adult_c_blink = ExtResource("16")
adult_c_blush = ExtResource("17")
adult_c_eat = ExtResource("18")
elder_a_idle = ExtResource("19")
elder_a_blink = ExtResource("20")
elder_a_blush = ExtResource("21")
elder_a_eat = ExtResource("22")
elder_a_passing = ExtResource("23")
elder_b_idle = ExtResource("24")
elder_b_blink = ExtResource("25")
elder_b_blush = ExtResource("26")
elder_b_eat = ExtResource("27")
elder_b_passing = ExtResource("28")
elder_c_idle = ExtResource("29")
elder_c_blink = ExtResource("30")
elder_c_blush = ExtResource("31")
elder_c_eat = ExtResource("32")
elder_c_passing = ExtResource("33")

[node name="time_until_age" type="Timer" parent="."]

[node name="turtle_sprite" type="Sprite2D" parent="."]
texture = ExtResource("34")

[node name="Egg" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("35")

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("36")

[node name="Evolution" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("37")

[connection signal="timeout" from="time_until_age" to="." method="_on_time_until_age_timeout"]
